[package]
name = 'correct'
version = '0.1.0'
authors = ['AlseinX <xyh951115@live.com>']
license = 'MIT'
description = 'A number wrapper that has correct bitwise shift behaviors rather than the primitives in rust language.'
homepage = 'https://github.com/AlseinX/correct'
repository = 'https://github.com/AlseinX/correct'
readme = 'README.md'
edition = '2018'

[dependencies]
